--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "validate": "office-toolbox validate -m manifest.xml",
+    "postinstall": "npm run cra:https:fix",
+    "cra:https:fix": "ts-node scripts/cra-https-fix.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/shelljs": "^0.8.6",
+    "office-toolbox": "^0.3.0",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.6.2"
   }
 }
